Fixed gap and font size styling

--- a/src/components/Article/index.css
+++ b/src/components/Article/index.css
@@ -2,7 +2,7 @@
   /* border: 1px solid red; */
   text-align: left;
   display: grid;
-  gap: 8px;
+  gap: 4px;
 }
 
 .article-bar {
@@ -18,13 +18,12 @@
 }
 
 .article-content__title {
-  padding: 3px 0;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 1.6;
 }
 
 .article-content__img {
-  margin: 10px 0 7px 0;
+  margin: 10px 0 8px 0;
   border-radius: 30px;
   height: 200px;
   width: 100%;
@@ -32,5 +31,11 @@
 }
 
 .article-content__body {
-  font-size: 0.93rem;
+  font-size: 0.83rem;
+}
+
+.article-comments-section {
+  margin: 6px 0 0 0;
+  display: grid;
+  gap: 5px;
 }
